--- a/09_DT_Regression/DT_Reg_Lab.ipynb
+++ b/09_DT_Regression/DT_Reg_Lab.ipynb
@@ -190,7 +190,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "6e97c16f-9ea4-4508-bd20-c77e18c7a8cb",
+       "ref": "d9f8722e-f6fc-44a4-b7ed-61974690c026",
        "rows": [
         [
          "0",
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,6 +818,13 @@
     "X_train2 = X_train.drop(columns=['movie_title', 'rating_Other', 'rating_PG','rating_PG-13','rating_R']).copy()\n",
     "X_tune2 = X_tune.drop(columns=['movie_title', 'rating_Other', 'rating_PG','rating_PG-13','rating_R']).copy()\n",
     "X_test2 = X_test.drop(columns=['movie_title', 'rating_Other', 'rating_PG','rating_PG-13','rating_R']).copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Transforming the target variable can help ensure that the target variable is more normally distributed. As a model can be prone to high variance and outliers, transforming the target variable can help reduce the impact of these issues. This can help improve the model's performance and interpretability."
    ]
   },
   {
@@ -1360,6 +1367,13 @@
     "               columns =['depth','rmse','r2','mae',\"rmseSD\",'r2SD','maeSD'])\n",
     "\n",
     "print(final_model3.head(10))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After trying out these two ideas, I found that the model did not improve significantly. The K-Fold Cross Validation's best parameter was a depth of 4 with a rmse of 1.583 and the content rating feature's best parameter was a depth of 5 with a rmse of 1.584. Both are higher than the original models' depth of 5 with a rmse of 1.57. I learned that the model is already performing at its best and that more feature engineering or changing the K-Fold Cross Validation may not always lead to better results. I believe it would be more useful to remove some features that are not contributing to the model's performance rather than adding more features. If I do add more features, it would just be pushing the limit, and the model will not improve. "
    ]
   },
   {
