--- a/09_DT_Regression/DT_Reg_Lab.ipynb
+++ b/09_DT_Regression/DT_Reg_Lab.ipynb
@@ -1499,6 +1499,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For the best model, the training score compared to testing score and tuning score is still greater. The model is trained on the training dataset, so it is still just overfitting for the training data. The model is not generalizing well to the test data and tune data because it is not able to generalize well to unseen data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#21 Where are the errors occurring in your predictions? Are they systematic or random? In either case, what are the implications of this?"
    ]
   },
@@ -1506,7 +1513,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The errors keep occurring on the testing and tuning predictions, but the model is still performing well on the training data. This implies that there is a systematic error where the model performs badly on unseen data. This is a sign of over-fitting as the predicted results would get influenced by noise and bias from the training data. The training dataset may be too complex with high variance that needs to be reduced. Another approach to this can be ensemble learning that combines multiple models to improve the performance of the model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#22 Summarize what you learned along the way and make recommendations on how this could be used moving forward, being careful not to over promise."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Along the way, I learned that there was a systematic error that is impeding me from getting the best results. It is obvious that overfitting is occurring as the model is not generalizing well to unseen data. For my recommendation to my boss, I would try using ensemble learning, such as Random Forest, to combine multiple models to improve the performance of the model. This can help reduce over-fitting and can possibility improve the model to achieve a higher score. Furthermore, I would say that there are some features that would seem important on paper can turn out to not contribute to the model's performance as much as one might believe. For example, there is a significant amount of genres that did not rank high on the variable importance compared to the decision tree classifier. It may be more effective to remove more features rather than adding more features. This method might reduce noise and bias in the training data that made the data too complex for the model to generalize well on other data. "
    ]
   }
  ],
