--- a/09_DT_Regression/DT_Reg_Lab.ipynb
+++ b/09_DT_Regression/DT_Reg_Lab.ipynb
@@ -1513,7 +1513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The errors keep occurring on the testing and tuning predictions, but the model is still performing well on the training data. This implies that there is a systematic error where the model performs badly on unseen data. This is a sign of over-fitting as the predicted results would get influenced by noise and bias from the training data. The training dataset may be too complex with high variance that needs to be reduced. Another approach to this can be ensemble learning that combines multiple models to improve the performance of the model."
+    "The errors keep occurring on the testing and tuning predictions, but the model is still performing better on the training data. This implies that there is a systematic error where the model performs badly on unseen data. This is a sign of over-fitting as the predicted results would get influenced by noise and bias from the training data. The training dataset may be too complex with high variance that needs to be reduced. Another approach to this can be ensemble learning that combines multiple models to improve the performance of the model."
    ]
   },
   {
