--- a/09_DT_Regression/DT_Reg_Lab.ipynb
+++ b/09_DT_Regression/DT_Reg_Lab.ipynb
@@ -190,7 +190,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d9f8722e-f6fc-44a4-b7ed-61974690c026",
+       "ref": "6cd6f83f-0bdb-40dc-90bf-e95f3367ab7f",
        "rows": [
         [
          "0",
@@ -753,7 +753,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1027/2536537550.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1062/2536537550.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1017,12 +1017,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'max_depth': 5}\n"
+      "{'max_depth': 5}\n",
+      "0.4340609893289649\n"
      ]
     }
    ],
    "source": [
-    "print(model.best_params_) # Print the best parameters"
+    "print(model.best_params_) # Print the best parameters\n",
+    "print(model.best_score_) # Print the best score"
    ]
   },
   {
@@ -1399,7 +1401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1419,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1463,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1480,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1499,7 +1501,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the best model, the training score compared to testing score and tuning score is still greater. The model is trained on the training dataset, so it is still just overfitting for the training data. The model is not generalizing well to the test data and tune data because it is not able to generalize well to unseen data."
+    "For the best model, the training score compared to testing score and tuning score is still greater. In addition, the testing and tuning score are relatively the same. The model is trained on the training dataset, so it is still just overfitting for the training data. The model is not generalizing well to the test data and tune data because it is not able to generalize well to unseen data."
    ]
   },
   {
@@ -1513,7 +1515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The errors keep occurring on the testing and tuning predictions, but the model is still performing better on the training data. This implies that there is a systematic error where the model performs badly on unseen data. This is a sign of over-fitting as the predicted results would get influenced by noise and bias from the training data. The training dataset may be too complex with high variance that needs to be reduced. Another approach to this can be ensemble learning that combines multiple models to improve the performance of the model."
+    "The errors keep occurring on the testing and tuning predictions, but the model is still performing better on the training data. From analyzing the model results, we can see that RMSE and MAE grow as the depth increases up to 5, but then they worsen after the peak. This suggests that there is a random error where the model performs badly on unseen data. This is a sign of over-fitting, which is a common random error, as the predicted results would get influenced by the variance seen in the training data. The training dataset may be too complex with high amounts of fluctuation and noise that needs to be further reduced."
    ]
   },
   {
@@ -1527,7 +1529,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Along the way, I learned that there was a systematic error that is impeding me from getting the best results. It is obvious that overfitting is occurring as the model is not generalizing well to unseen data. For my recommendation to my boss, I would try using ensemble learning, such as Random Forest, to combine multiple models to improve the performance of the model. This can help reduce over-fitting and can possibility improve the model to achieve a higher score. Furthermore, I would say that there are some features that would seem important on paper can turn out to not contribute to the model's performance as much as one might believe. For example, there is a significant amount of genres that did not rank high on the variable importance compared to the decision tree classifier. It may be more effective to remove more features rather than adding more features. This method might reduce noise and bias in the training data that made the data too complex for the model to generalize well on other data. "
+    "Along the way, I learned more about the challenges of implementing a Decision Tree Regressor. The problem with the model is that it overfits easily that may be hard to address for the data with high variance. There was a random error that is impeding me from getting the best results as there are too many fluctuation in the error. It is obvious that overfitting is occurring as the model is not generalizing well to unseen data. For my recommendation to my boss, I would try using ensemble learning, such as Random Forest, to combine multiple models to improve the performance of the model. This may help reduce over-fitting and can possibility improve the model to achieve a higher score. Furthermore, I would say that there are some features that would seem important on paper can turn out to not contribute to the model's performance as much as one might believe. For example, there is a significant amount of genres that did not rank high on the variable importance compared to the decision tree classifier. It may be more effective to remove more features rather than adding more features. This method might reduce noise and bias in the training data that made the data too complex for the model to generalize well on other data. "
    ]
   }
  ],
