edits to bad lab

--- a/05_ML_Concepts_II_Data_Prep/lab3.ipynb
+++ b/05_ML_Concepts_II_Data_Prep/lab3.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 1: How does early academic record impact college completion prediction? "
+    "Question 1: How do we predict college completion (grad_150) for students? "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Question 2: Do academic background and specialization play a role in salary outcomes? "
+    "Question 2: How do we predict salary outcomes (earn_mdn) for students?"
    ]
   },
   {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +73,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Warning: Looks like you're using an outdated `kagglehub` version (installed: 0.3.7), please consider upgrading to the latest version (0.3.11).\n",
       "['cc_state_sector_details.csv', 'cc_state_sector_grads.csv', 'cc_institution_grads.csv', 'cc_institution_details.csv']\n"
      ]
     }
@@ -90,6 +91,13 @@
     "\n",
     "dataset_path = \"/home/vscode/.cache/kagglehub/datasets/thedevastator/boost-student-success-with-college-completion-da/versions/1\"\n",
     "print(os.listdir(dataset_path))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Retrieving Data From Dataset Path"
    ]
   },
   {
@@ -182,6 +190,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Selecting Relevant Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -193,12 +208,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Dropping Missing Values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df2 = df2.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Converting Objects to Categorical Variables"
    ]
   },
   {
@@ -231,6 +260,13 @@
     "df2[['level','control']] = df2[['level','control']].astype('category')\n",
     "\n",
     "print(df2.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scaling Data for Numerical Variables"
    ]
   },
   {
@@ -522,6 +558,13 @@
     "\n",
     "df2[abc] = MinMaxScaler().fit_transform(df2[abc])\n",
     "df2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### One-Hot Encoding Categorical Variables"
    ]
   },
   {
@@ -865,12 +908,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Excluding Student Count From Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "df3 = df3.drop(['student_count'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Describing Graduation Rate "
    ]
   },
   {
@@ -1149,12 +1206,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Dropping Missing Values "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds2=ds.dropna()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### More Information on the Dataset"
    ]
   },
   {
@@ -1193,6 +1264,13 @@
    ],
    "source": [
     "ds2.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Converting Objects to Categorical Variables"
    ]
   },
   {
@@ -1239,6 +1317,13 @@
     "ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']] = ds2[['ssc_b','hsc_b','hsc_s','degree_t','workex','specialisation']].astype('category')\n",
     "\n",
     "print(ds2.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Scaling Data for Numerical Variables"
    ]
   },
   {
@@ -1553,6 +1638,13 @@
     "\n",
     "ds2[abc] = MinMaxScaler().fit_transform(ds2[abc])\n",
     "ds2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### One-Hot Encoding Categorical Variables"
    ]
   },
   {
@@ -1943,12 +2035,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Excluding Unnecessary Columns From Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "ds2 = ds2.drop(['sl_no','gender','status'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Describing the Data"
    ]
   },
   {
@@ -2060,6 +2166,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Function for Data Preparation and Train/Test Split (1st Dataset)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -2099,6 +2212,13 @@
     "print(Train.shape)\n",
     "print(Test.shape)\n",
     "print(Tune.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Function for Data Preparation and Train/Test Split (2nd Dataset)"
    ]
   },
   {
